<resources>
    <string name="app_name">Healthy</string>

    // Labels
    <string name="lable_dashboard">Dashboard</string>
    <string name="lable_hinzufuegenPt">Patienten hinzufügen</string>
    <string name="lable_suchePt">Suche nach Patientenakte</string>
    <string name="lable_sucheUebung">Suche Übung</string>

    // TextViews
    <string name="tv_id">ID</string>
    <string name="tv_alter">Alter</string>
    <string name="tv_waehleGeburtstag">+</string>
    <string name="tv_vorname">Vorname</string>
    <string name="tv_nachname">Nachname</string>
    <string name="tv_geburtstag">Geburtstag</string>
    <string name="tv_medikamente">Medikamente</string>
    <string name="tv_beschwerden">Beschwerden</string>
    <string name="tv_notizen">Notizen</string>
    <string name="tv_rg_notizen">Notizen eingeben?</string>
    <string name="tv_aktuellesDatum">Aktuelles Datum:</string>
    <string name="tv_pflichtfeld"><font fgcolor="red">*</font></string>
    <string name="tv_daten_in_datenbank_speichern">Daten in Datenbank speichern</string>
    <string name="tv_daten_aus_datenbank_speichern">Daten aus Datenbank laden</string>
    <string name="tv_datenbank_ist_leer">Datenbank ist leer</string>
    <string name="tv_loeschen">Einträge löschen</string>

    // EditText
    <string name="et_medikamente">Medikamente:<font fgcolor="red">*</font></string>
    <string name="et_beschwerden">Beschwerden:<font fgcolor="red">*</font></string>
    <string name="et_notizen">Notizen:<font fgcolor="red">*</font></string>
    <string name="et_vorname_pflicht">Vorname:<font fgcolor="red">*</font></string>
    <string name="et_nachname_pflicht">Nachname:<font fgcolor="red">*</font></string>
    <string name="et_beschwerden_pflicht">Beschwerden eingeben?<font fgcolor="red">*</font></string>
    <string name="et_medikamente_pflicht">Medikamente eingeben?<font fgcolor="red">*</font></string>
    <string name="et_password_pflicht">Password<font fgcolor="red">*</font></string>

    // Buttons
    <string name="btn_new_pt">Patienten hinzufügen</string>
    <string name="btn_change_pt">Patienten auswählen</string>
    <string name="btn_settings">Einstellungen</string>
    <string name="btn_uebungen">Übungen</string>
    <string name="btn_ausloggen">Ausloggen</string>

    //RadioButton
    <string name="rb_ja">Ja</string>
    <string name="rb_nein">Nein</string>

    //Error
    <string name="error_leeres_feld">Das Feld darf nicht leer sein.</string>




    <string name="button_add_product">+</string>
    <string name="cab_delete">Einträge löschen</string>
    <string name="action_settings">Settings</string>

</resources>
