<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <EditText
                android:id="@+id/et_nachname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tv_nachname"
                android:ems="10"
                android:textSize="30sp"
                android:inputType="textPersonName"
                android:layout_margin="8dp"/>
            <EditText
                android:id="@+id/et_vorname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tv_vorname"
                android:ems="10"
                android:textSize="30sp"
                android:inputType="textPersonName"
                android:layout_margin="8dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_waehleGeburtstag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_waehleGeburtstag"
                    android:textSize="30sp"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/tv_pflichtfeld"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_pflichtfeld"
                    android:textSize="30sp"
                    android:layout_alignTop="@+id/btn_waehleGeburtstag"
                    android:layout_toEndOf="@+id/btn_waehleGeburtstag"
                    android:layout_toRightOf="@+id/btn_waehleGeburtstag"
                    android:textColor="@android:color/holo_red_dark"/>

                <TextView
                    android:id="@+id/tv_geburtsdatum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tv_pflichtfeld"
                    android:layout_toEndOf="@+id/tv_pflichtfeld"
                    android:layout_toRightOf="@+id/tv_pflichtfeld"
                    android:ems="7"
                    android:textSize="30sp"
                    android:layout_margin="8dp"/>

                <TextView
                    android:id="@+id/tv_alter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_alter_normal"
                    android:textSize="30sp"
                    android:layout_alignBaseline="@+id/tv_geburtsdatum"
                    android:layout_alignBottom="@+id/tv_geburtsdatum"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_aktuellesDatum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_aktuellesDatum"
                android:ems="10"
                android:textSize="24sp"
                android:visibility="invisible"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rl_beschwerden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_rg_beschwerden"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_rg_beschwerden"
                            android:gravity="center"
                            android:layout_weight="1"/>

                        <RadioButton
                            android:id="@+id/rb_beschwerden_ja"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rb_ja"
                            android:layout_weight="1"/>

                        <RadioButton
                            android:id="@+id/rb_beschwerden_nein"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rb_nein"
                            android:layout_weight="1"/>
                    </RadioGroup>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rl_medikamente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@+id/rl_beschwerden"
                    android:layout_toEndOf="@+id/rl_beschwerden">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_rb_medikamente"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_rg_medikamente"
                            android:gravity="center"
                            android:layout_weight="1"/>

                        <RadioButton
                            android:id="@+id/rg_medikamente_ja"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rb_ja"
                            android:layout_weight="1"/>

                        <RadioButton
                            android:id="@+id/rg_medikamente_nein"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rb_nein"
                            android:layout_weight="1"/>
                    </RadioGroup>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rl_notizen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/rl_medikamente"
                    android:layout_toEndOf="@+id/rl_medikamente">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_rb_notizen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_rg_notizen"
                            android:gravity="center"
                            android:layout_weight="1"/>

                        <RadioButton
                            android:id="@+id/rg_notizen_ja"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rb_ja"
                            android:layout_weight="1"/>

                        <RadioButton
                            android:id="@+id/rg_notizen_nein"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rb_nein"
                            android:layout_weight="1"/>
                    </RadioGroup>
                </RelativeLayout>

            </RelativeLayout>


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_beschwerden"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/et_beschwerden"
                    android:ems="10"
                    android:textSize="30sp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"/>
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_medikamente"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/et_medikamente"
                    android:textSize="30sp"
                    android:layout_margin="8dp"/>
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_notizen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/et_notizen"
                    android:ems="10"
                    android:textSize="30sp"
                    android:layout_margin="8dp"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_speichern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_daten_in_datenbank_speichern"/>

    </LinearLayout>

</LinearLayout>
